bonus/service-mesh-exploit/credit-card.yaml
#credit-card.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: v1
kind: Pod
metadata:
  name: creditcard
  namespace: prod
  labels:
    app: creditcard
spec:
  containers:
  - name: app
    image: hashicorp/http-echo
    args:
    - "-text=Payment processed"
    ports:
    - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: creditcard
  namespace: prod
spec:
  selector:
    app: creditcard
  ports:
  - port: 80
    targetPort: 5678
