bonus/service-mesh-exploit/exfil-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: attacker-exfiltrator
  namespace: kubepwn
spec:
  selector:
    app: attacker-exfiltrator
  ports:
  - port: 80
    targetPort: 80
